Consolidated cherry-picks from master branch
* Add timestamps if ts available and verbose mode (#621)

* Add warning for possible uninitialized meshconfig (#625)

* Change service account detection pattern (#631)

Use a more broad pattern for detecting if current gcloud account is a service account or not

* install_asm: allow setting GCLOUD_USER_OR_SA (#633)

Fixes #632

* Install istio-cni with securityContext for SELinux (#636)

* add samples directory with online-boutique manifests (#650)

* Add config for MCP CNI (#652)

* Add config for MCP CNI

This config was generated once, but isn't intended to be updated by repeating that generation process.

* Cherry-pick of 409f61cc6fc87a5897038a2a4e9f56657092f842

* Fix sed command to retrieve project id from workload identity (#662)

* Cherry-pick of d2802f45876bcf42cbfec1648ed971e604b07d59

* Adjust container commnad path for istio-cni-repair (#671)

Upstream has modified the template in 1.10.
https://github.com/istio/istio/pull/31906
This change is needed in order to use the new image in master branch
Scritaro. This change doesn't need to be cherry-picked to 1.9
since it's not affected.

* Move SA auth (#675)

* Handle when a user is using SA impersonation and allow roles/owners to satisfy cluster permissions check (#682)

* handle sa impersonation and users with owner role

Co-authored-by: Dan Le Febvre <dlf@google.com>

* Cherry-pick of b2a721f9297e4dd98c7d4c34e2759d817f251ee8

* Allow testing ASM package change in the same PR (#696)

* Allow testing ASM package change in the same PR

* remove curly brackets

* Allow testing ASM package change in the same PR for staging (#699)

* Cherry-pick of e15a6cbc04f0ae268bbf3b0aa443552404d32cfb

* Update retry() to show executed command when it failed (#714)

* Cherry-pick of 962f4abd8589b07e6a14d65488142c4c9612e2ec

* fix: option file for migrated meshca trustDomainAlias (#725)

* Add option to skip default gate

--- a/asm/istio/options/no-default-ingress.yaml
+++ b/asm/istio/options/no-default-ingress.yaml
@@ -12,27 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START docs]
 ---
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
   components:
-    pilot:
-      k8s:
-        env:
-          - name: SPIFFE_BUNDLE_ENDPOINTS
-            value: ""
-          - name: TOKEN_AUDIENCES
-            value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
-          - name: ENABLE_STACKDRIVER_MONITORING
-            value: "true" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.controlplane.monitoring.enabled"}
-  meshConfig:
-    trustDomain: "cluster.local"
-    defaultConfig:
-      proxyMetadata:
-        CA_PROVIDER: "Citadel"
-        PLUGINS: ""
-  values:
-    global:
-      caAddress: ""
-      pilotCertProvider: "istiod"
+    ingressGateways:
+      - name: istio-ingressgateway
+        enabled: false
+# [END docs]
