--- a/samples/online-boutique/istio-manifests/frontend-gateway.yaml
+++ b/samples/online-boutique/istio-manifests/frontend-gateway.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Google LLC
+# Copyright 2018 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,18 +12,33 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
----
-apiVersion: install.istio.io/v1alpha1
-kind: IstioOperator
+apiVersion: networking.istio.io/v1alpha3
+kind: Gateway
+metadata:
+  name: frontend-gateway
 spec:
-  values:
-    pilot:
-      env:
-        ENABLE_CA_SERVER: false
-        ISTIO_MULTIROOT_MESH: true
-  meshConfig:
-    defaultConfig:
-      proxyMetadata:
-        PROXY_CONFIG_XDS_AGENT: "true"
-    trustDomainAliases: # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.trustDomainAliases"}
-      - "cluster.local"
+  selector:
+    istio: ingressgateway # use Istio default gateway implementation
+  servers:
+  - port:
+      number: 80
+      name: http
+      protocol: HTTP
+    hosts:
+    - "*"
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: frontend-ingress
+spec:
+  hosts:
+  - "*"
+  gateways:
+  - frontend-gateway
+  http:
+  - route:
+    - destination:
+        host: frontend
+        port:
+          number: 80
