--- a/asm/istio/options/cni-selinux.yaml
+++ b/asm/istio/options/cni-selinux.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Google LLC
+# Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,27 +12,26 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START docs]
 ---
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
   components:
-    pilot:
+    cni:
+      enabled: true
+      namespace: kube-system
       k8s:
-        env:
-          - name: SPIFFE_BUNDLE_ENDPOINTS
-            value: ""
-          - name: TOKEN_AUDIENCES
-            value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
-          - name: ENABLE_STACKDRIVER_MONITORING
-            value: "true" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.controlplane.monitoring.enabled"}
-  meshConfig:
-    trustDomain: "cluster.local"
-    defaultConfig:
-      proxyMetadata:
-        CA_PROVIDER: "Citadel"
-        PLUGINS: ""
+        overlays:
+          - kind: DaemonSet
+            name: istio-cni-node
+            patches:
+              - path: spec.template.spec.containers.[name:install-cni].securityContext
+                value: {"privileged": true}
   values:
-    global:
-      caAddress: ""
-      pilotCertProvider: "istiod"
+    cni:
+      cniBinDir: /home/kubernetes/bin
+      excludeNamespaces:
+        - istio-system
+        - kube-system
+# [END docs]
