--- a/asm/istio/options/cni-managed.yaml
+++ b/asm/istio/options/cni-managed.yaml
@@ -333,4 +333,5 @@ spec:
               - serviceAccountToken:
                   path: istio-token
                   expirationSeconds: 43200
-                audience: istio-ca
+                # yamllint disable-line rule:line-length
+                audience: "PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
