--- a/asmcli/cloudbuild-staging.yaml
+++ b/asmcli/cloudbuild-staging.yaml
@@ -286,6 +286,25 @@ steps:
   - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
   timeout: 2400s # 40 mins
 
+- name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'asmcli'
+  id: 'run-build-offline-package'
+  entrypoint: '/bin/bash'
+  args:
+    - '-c'
+    - >
+      ./tests/run_build_offline_package
+      --PROJECT_ID "${PROJECT_ID}"
+      --BUILD_ID "${BUILD_ID}"
+  env:
+    - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
+    - 'KEY_FILE=${_KEY_FILE}'
+    - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
+    - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
+    - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
+    - '_LT_CLUSTER_NAME=long-term-test-cluster-environ'
+  timeout: 900s
+
 substitutions:
   _BUCKET_NAME: my-gcs-bucket
   _CLUSTER_LOCATION: us-central1-c
