--- a/samples/gateways/istio-egressgateway/autoscaling-v2.yaml
+++ b/samples/gateways/istio-egressgateway/autoscaling-v2.yaml
@@ -4,7 +4,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: istio-ingressgateway
+  name: istio-egressgateway
 spec:
   maxReplicas: 5
   metrics:
@@ -14,8 +14,8 @@ spec:
       target:
         type: Utilization
         averageUtilization: 80
-  minReplicas: 3
+  minReplicas: 2
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: istio-ingressgateway
+    name: istio-egressgateway
