--- a/samples/gateways/istio-egressgateway/autoscaling-v2beta1.yaml
+++ b/samples/gateways/istio-egressgateway/autoscaling-v2beta1.yaml
@@ -1,21 +1,19 @@
 # Optional: HorizontalPodAutoscaler will automatically scale the gateway replica count based on
 # CPU utilization
-# Used on >=1.23 K8S versions
-apiVersion: autoscaling/v2
+# Used on <1.23 K8S versions
+apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: istio-ingressgateway
+  name: istio-egressgateway
 spec:
   maxReplicas: 5
   metrics:
-  - type: Resource
-    resource:
+  - resource:
       name: cpu
-      target:
-        type: Utilization
-        averageUtilization: 80
-  minReplicas: 3
+      targetAverageUtilization: 80
+    type: Resource
+  minReplicas: 2
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: istio-ingressgateway
+    name: istio-egressgateway
