--- a/samples/gateways/istio-ingressgateway/service.yaml
+++ b/samples/gateways/istio-ingressgateway/service.yaml
@@ -28,8 +28,10 @@ spec:
   # Any ports exposed in Gateway resources should be exposed here.
   - name: http2
     port: 80
+    targetPort: 8080
   - name: https
     port: 443
+    targetPort: 8443
   selector:
     istio: ingressgateway
     app: istio-ingressgateway
