--- a/samples/gateways/istio-egressgateway/deployment.yaml
+++ b/samples/gateways/istio-egressgateway/deployment.yaml
@@ -31,8 +31,20 @@ spec:
         app: istio-egressgateway
         istio: egressgateway
     spec:
+      securityContext:
+        fsGroup: 1337
+        runAsGroup: 1337
+        runAsNonRoot: true
+        runAsUser: 1337
       containers:
       - name: istio-proxy
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - all
+          privileged: false
+          readOnlyRootFilesystem: true
         image: auto # The image will automatically update each time the pod starts.
         resources:
           limits:
