--- a/asm/control-plane-revision/cr_stable.yaml
+++ b/asm/control-plane-revision/cr_stable.yaml
@@ -5,7 +5,7 @@ metadata:
   name: asm-managed-stable
   namespace: istio-system
   labels:
-    mesh.cloud.google.com/managed-cni-enabled: "" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.use-managed-cni"}
+    mesh.cloud.google.com/managed-cni-enabled: "true"
     app.kubernetes.io/created-by: "" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.created-by"}
   annotations:
     mesh.cloud.google.com/vpcsc: "false" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.managed-controlplane.vpcsc.enabled"}
